--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "expo-clipboard": "^4.5.0",
     "expo-modules-core": "^1.5.11",
     "jest": "^29.7.0",
+    "json5": "^2.2.3",
     "pod-install": "^0.1.39",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
@@ -76,7 +77,9 @@
     "react-native-builder-bob": "^0.20.4",
     "react-test-renderer": "^18.2.0",
     "release-it": "^16.2.1",
-    "typescript": "^5.2.2"
+    "semver": "^7.5.4",
+    "typescript": "^5.2.2",
+    "xml2js": "^0.6.2"
   },
   "resolutions": {
     "@types/react": "17.0.21"
@@ -85,15 +88,17 @@
     "react": "*",
     "react-native": "*"
   },
+  "overrides": {
+    "xml2js": "^0.6.2",
+    "semver": "^7.5.4",
+    "json5": "^2.2.3"
+  },
   "engines": {
     "node": ">= 16.0.0"
   },
   "packageManager": "^yarn@1.22.15",
   "jest": {
     "preset": "react-native",
-    "setupFiles": [
-      "./node_modules/react-native-gesture-handler/jestSetup.js"
-    ],
     "modulePathIgnorePatterns": [
       "<rootDir>/example/node_modules",
       "<rootDir>/lib/"
